# Scribble

scribble-app/: .gitignore  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json  cmake_install.cmake  vcpkg.json
scribble-app/src/: main.c  main.cpp  nuklear_glfw_gl3.h  nuklear_sdl_gl3.h
scribble-app/src/common/: overview.c  style.c
